get basic spring boot + javafx app working displaying the webcam with opencv